--- a/Develop/index.html
+++ b/Develop/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <nav>
         <div>
             <ul>
                 <li>
@@ -23,6 +24,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
+        </nav>
         </div>
     </header>
     <div class="hero"></div>
