--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
+    <header class="header">
+        <h1 class="title">Hori<span class="seo">seo</span>n</h1>
         <nav>
         <div>
             <ul>
